home page responsive,about,contact

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -196,7 +196,9 @@ body {
     color: #333;
     cursor: pointer;
 }
-
+.play_circle {
+    cursor: pointer;
+}
 .section-title {
     padding-top: 40px;
     font-size: 14px;
@@ -952,10 +954,12 @@ h3,
     height: 300px;
 }
 
-.card-title {
+.card-title a {
+    text-decoration: none;
     padding-top: 20px;
-    font-family: 'GFS Didot';
+    font-family: 'GFS Didot';   
     font-size: 24px;
+    color: #1B1C21;
     line-height: 32px;
 }
 
@@ -1194,11 +1198,62 @@ h3,
     z-index: 0;
 }
 
+
+
+/* Modal Styles */
+.video-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.video-content {
+    position: relative;
+    width: 80%;
+    max-width: 800px;
+    background: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    padding: 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.video-content iframe {
+    width: 100%;
+    height: 450px;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1001;
+}
+
+.close-button:hover {
+    color: #ff4c4c;
+}
+
 @media (max-width:1230px) {
     .right_side {
-        width: 600px !important;
+        width: 500px !important;
     }
+
 }
+
+
 
 @media (max-width:1024px) {
     .luxury-title {
@@ -1612,7 +1667,7 @@ h3,
 
 @media (min-width: 768px) and (max-width: 768px) {
     .left_side {
-        width: 360px;
+        width: 360px !important;
     }
 
     .right_side {
@@ -1646,9 +1701,7 @@ h3,
         font-size: 85px;
     }
 
-    .our_info::after {
-        font-size: 85px;
-    }
+
 
     .img-fluid {
         margin-left: 0px;
@@ -1681,8 +1734,9 @@ h3,
     }
 
     .our_info::after {
-        font-size: 64px;
+        font-size: 52px;
         right: 0px;
+        top: 50%;
     }
 
     .escape_villa::after {
@@ -1701,6 +1755,10 @@ h3,
 
     .text-box p {
         font-size: 14px;
+    }
+
+    .stats {
+        margin-top: 20px;
     }
 
     .stat-box {
