--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -1,3 +1,15 @@
 .pine_slider {
-    padding:100px 0px;
+    padding: 100px 0px;
+}
+
+@media(max-width:767px) {
+    .contact_head br {
+        display: none;
+    }
+
+    .contact_head {
+        font-size: 34px;
+        line-height: 48px;
+        letter-spacing: 1px;
+    }
 }
