--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -53,8 +53,18 @@ a {
     color: #8b5e34;
 }
 
+.left-links a:hover {
+    color: #8b5e34;
+}
 
+.right-links span:hover {
+    color: #8b5e34;
+}
 
+.right-links img:hover,
+.left-links img:hover {
+    filter: invert(41%) sepia(19%) saturate(1033%) hue-rotate(346deg) brightness(88%) contrast(84%);
+}
 
 .dropdown-menu {
     background-color: #f8f9fa;
@@ -115,7 +125,7 @@ img.menu-toggle-icon {
         flex-grow: 1;
         z-index: 1;
         position: absolute;
-        top: -74px;
+        top: -3px;
         right: -11px;
         background: #F9FAFB;
         width: 100vw;
@@ -129,6 +139,26 @@ img.menu-toggle-icon {
         align-items: center;
         width: 100%;
         /* Ensure the container spans the full width */
+    }
+
+    .mobile-dropdown {
+        position: static;
+        width: 100%;
+        border: none;
+        padding-left: 1rem;
+        background: #f8f9fa;
+    }
+
+    .mobile-dropdown .dropdown-item {
+        padding: 0.5rem 1rem;
+        text-align: center;
+    }
+
+    .navbar-nav .dropdown-menu {
+        position: static;
+        width: 300px;
+        margin: auto !important;
+        text-align: center;
     }
 }
 
@@ -152,16 +182,14 @@ img.menu-toggle-icon {
         margin-left: 20px;
     }
 
-    .right-links span {
-        display: none;
-    }
+
 
     .navbar-collapse {
         flex-basis: 100%;
         flex-grow: 1;
         z-index: 1;
         position: absolute;
-        top: -56px;
+        top: 10px;
         right: -11px;
         background: #F9FAFB;
         width: 100vw;
@@ -200,6 +228,12 @@ img.menu-toggle-icon {
     }
 
     .navbar-nav img {
+        display: none;
+    }
+}
+
+@media (max-width:567px) {
+    .right-links span {
         display: none;
     }
 }
