--- a/src/components/Booking/booking.css
+++ b/src/components/Booking/booking.css
@@ -50,6 +50,7 @@ label {
     display: flex;
     align-items: center;
     width: 100%;
+    z-index: 10;
 }
 
 .dropdown-icon {
@@ -105,10 +106,30 @@ label {
     border: 1px solid #B7A18B;
 }
 
+
 @media (max-width: 1220px) {
     .booking-container {
         max-width: 1220px;
         padding: 0 10px;
+    }
+}
+
+@media (max-width:1024px) {
+    .book-now-btn {
+        padding: 18px 24px;
+    }
+
+    .booking-item:first-child {
+        width: 40%;
+    }
+
+
+}
+
+@media(max-width:991px) {
+    .banner-wrapper {
+
+        z-index: 0;
     }
 }
 
@@ -154,7 +175,15 @@ label {
     }
 
     .react-datepicker__input-container {
-        width: 300px;
+        width: 100% !important;
+        /* Ensure datepicker fits mobile view */
+    }
+
+    .select-date {
+        padding: 12px 10px;
+        /* Adjust padding for smaller screens */
+        max-width: 100%;
+        /* Ensure input doesn't overflow */
     }
 
     .booking-section {
@@ -164,6 +193,6 @@ label {
 
     .banner-wrapper {
         margin-bottom: 118px;
-        z-index: -1;
+        z-index: 0;
     }
 }
