--- a/src/components/Booking/booking.css
+++ b/src/components/Booking/booking.css
@@ -106,6 +106,11 @@ label {
     border: 1px solid #B7A18B;
 }
 
+.booking-counter-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
 
 @media (max-width: 1220px) {
     .booking-container {
@@ -125,17 +130,25 @@ label {
 
 
 }
-@media(max-width:991px){
+
+@media(max-width:991px) {
     .banner-wrapper {
-            z-index: 0;
+        z-index: 0;
+    }
+    .booking-section{
+        padding: 17px 20px;
+    }
+        .booking-row {
+            gap: 40px;
         }
 }
+
 @media (max-width: 767px) {
     .booking-row {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 40px;
     }
 
     .react-datepicker {
@@ -184,12 +197,17 @@ label {
     }
 
     .booking-section {
-
-        bottom: -124px;
+        position: inherit;
+        transform: none;
+        margin-top: 40px;
     }
 
     .banner-wrapper {
-        margin-bottom: 118px;
+        margin-bottom: 0px;
         z-index: 0;
+    }
+
+    .booking-counter-wrapper .booking-item {
+        width: auto;
     }
 }
