Faq villas page responsive

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -1271,7 +1271,7 @@ h3,
     .title_part {
         padding-top: 32px;
     }
-
+  
     .amenities-heading {
         margin-bottom: 0px;
         padding-bottom: 22px;
@@ -1355,7 +1355,15 @@ h3,
     .description {
         padding-top: 15px;
         font-size: 15px;
+        margin-left: 14px;
+        margin-right: 14px;
     }
+
+    .chhose_us .description {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
 
     .icon-placeholder img {
         width: 48px;
@@ -1441,10 +1449,13 @@ h3,
         width: 45% !important;
     }
 
+    .chhose_us .row {
+        gap: 1rem !important;
+    }
 
 
     .right_side {
-        width: 45% !important;
+        width: 53% !important;
     }
 
     .testimonial-text {
@@ -1537,6 +1548,8 @@ h3,
         margin-top: 20px;
     }
 
+
+
 }
 
 
@@ -1545,7 +1558,9 @@ h3,
         flex-direction: column;
     }
 
-
+    .description br {
+        display: none;
+    }
 
     .image-left,
     .content-right {
