--- a/src/components/About_slider/pinehill.css
+++ b/src/components/About_slider/pinehill.css
@@ -2,29 +2,45 @@
     z-index: 1;
     bottom: 40px !important;
 }
+
 .slick-list {
     padding-bottom: 10px !important;
 }
+
 .about_slide.slider-container .slider-item {
     padding: 0 10px;
     background-color: #fff;
 }
+
 .slide1_img {
     background-image: url('../../assets/image/hotel_interior.jpg');
     background-size: cover;
 }
+
 .slide2_img {
     background-image: url('../../assets/image/news_section2.jpg');
     background-size: cover;
 }
+
 .slide3_img {
     background-image: url('../../assets/image/restaurant_bg.jpg');
     background-size: cover;
 }
+
 .slider-container .slider-content {
     height: 400px;
-    width: 100% !important; 
+    width: 100% !important;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width:1024px) {
+    .pine_slider {
+        padding: 70px 0px !important;
+    }
+
+    .detail_resort {
+        margin-top: 0px !important;
+    }
 }
