--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -2,6 +2,16 @@
     padding: 100px 0px;
 }
 
+@media (max-width:1024px) {
+    .padding_cls {
+        padding-top: 60px;
+    }
+
+    .main_part {
+        padding: 80px 0px;
+    }
+}
+
 @media(max-width:767px) {
     .contact_head br {
         display: none;
