--- a/src/Pages/Faq/faq.css
+++ b/src/Pages/Faq/faq.css
@@ -69,7 +69,7 @@
 
 .faq-item .faq-question.active {
     background: #472C10 !important;
-    color: #fff;
+    color: #fff !important;
     border: none !important;
 }
 
@@ -106,6 +106,10 @@
 
 .faq_testimonial {
     padding-bottom: 90px
+}
+
+.testimonial-section1 {
+    padding-bottom: 80px;
 }
 
 @media(max-width:1199px) {
