--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -310,7 +310,7 @@ body {
 
 .options-container {
     display: grid;
-    padding: 60px 0px;
+    padding: 60px 0px 0px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 32px;
 }
@@ -418,6 +418,7 @@ body {
     text-align: left;
     position: relative;
     z-index: 2;
+    margin: auto 0;
 }
 
 .left-section h2 {
@@ -434,6 +435,11 @@ body {
     padding: 24px;
     width: 434px;
 
+}
+
+.feature:last-child {
+    margin-bottom: 0;
+    /* Remove extra margin on the last child */
 }
 
 .feature h4 {
@@ -482,6 +488,7 @@ body {
     line-height: 36px;
     letter-spacing: 2px;
     color: #1B1C21;
+    margin-bottom: 0px;
 }
 
 .styled-hr {
@@ -497,6 +504,7 @@ body {
     font-size: 17px;
     line-height: 26px;
     color: #666666;
+    margin-bottom: 0px;
 }
 
 .right-section button {
@@ -1108,7 +1116,6 @@ h3,
 }
 
 .image-left {
-    position: absolute;
     z-index: 2;
 }
 
@@ -1119,7 +1126,7 @@ h3,
     /* background-image: url('../../assets/image/hotel_interior.jpg'); */
     background-size: cover;
     position: absolute;
-    top: 321px;
+    top: 361px;
     left: -45px;
     border: 12px solid #fff;
     z-index: 1;
@@ -1128,7 +1135,6 @@ h3,
 /* Right content area */
 .content-right {
     width: 55%;
-    position: relative;
     min-height: 600px;
 }
 
@@ -1271,10 +1277,23 @@ h3,
     .title_part {
         padding-top: 32px;
     }
-  
+
     .amenities-heading {
         margin-bottom: 0px;
         padding-bottom: 22px;
+    }
+
+    .right-section {
+        gap: 30px;
+    }
+
+    .right-section br {
+        display: none;
+    }
+
+    .right-section h2 {
+        font-size: 24px;
+        line-height: 34px;
     }
 }
 
@@ -1548,7 +1567,22 @@ h3,
         margin-top: 20px;
     }
 
+    .right-section {
+        gap: 30px;
+    }
 
+    .right-section br {
+        display: none;
+    }
+
+    .right-section h2 {
+        font-size: 22px;
+        line-height: 32px;
+    }
+
+    .image-left img {
+        top: 318px;
+    }
 
 }
 
@@ -1637,10 +1671,12 @@ h3,
 
     .right-section {
         padding: 0 26px;
+        gap: 20px;
     }
 
     .right-section h2 {
-        font-size: 24px;
+        font-size: 19px;
+        line-height: 29px;
     }
 
     .right-section button {
@@ -1685,6 +1721,7 @@ h3,
     .image-left img {
         width: 330px;
         left: -28px;
+        top: 352px;
     }
 
     .testimonial-text {
