--- a/src/Pages/Testimonial/testimonial.css
+++ b/src/Pages/Testimonial/testimonial.css
@@ -1,5 +1,6 @@
 .grey_part {
-    background-color: rgb(60 60 60 / 61%);
+    background-image: url('../../assets/image/testimonial_pg.jpg');
+    background-size: cover;
     height: 370px;
     margin-top: -200px;
 }
@@ -12,11 +13,14 @@
     border: 1px solid #ddd;
     border-radius: 0px !important;
     padding: 24px;
+    height: 400px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .testimonial_area .card-body {
     padding: 0px !important;
 }
+
 .testimonial_area .card-title {
     padding-top: 16px !important;
     font-family: 'GFS Didot';
@@ -80,4 +84,17 @@
     position: absolute;
     top: 70px;
     /* Ensures the image covers the circle perfectly */
+}
+
+
+@media (max-width:991px) {
+    .testimonial_area .card {
+        padding: 20px;
+        height: 400px;
+    }
+
+    .testimonial_area .card-text {
+        font-size: 14px;
+        line-height: 24px;
+    }
 }
