--- a/src/Pages/Blog/blog.css
+++ b/src/Pages/Blog/blog.css
@@ -7,10 +7,12 @@
     line-height: 40px;
     color: #1B1C21;
 }
-.blog{
+
+.blog {
     padding-top: 50px;
     padding-bottom: 100px;
 }
+
 .blog .card-body {
     padding: 0px !important;
 }
@@ -33,9 +35,11 @@
     font-family: 'Raleway';
     line-height: 20px;
 }
+
 .main_card {
     padding-bottom: 40px;
 }
+
 .pagination {
     padding-top: 50px;
     gap: 12px;
@@ -63,8 +67,10 @@
 }
 
 
-.news-image-placeholder {
-    background-color: #e0e0e0;
+
+.news-image-placeholder img {
+    object-fit: cover;
+    width: 100%;
     height: 390px;
 }
 
@@ -82,8 +88,85 @@
     font-family: 'Raleway';
 
 }
-.blog_hr{
+
+.blog_hr {
     width: 100%;
     height: 2px;
     color: #666666;
+}
+
+.placeholder_img {
+    width: 400px;
+    height: 300px;
+    margin-bottom: 15px;
+    background-color: #e0e0e0;
+}
+.placeholder_img img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+}
+
+@media (max-width:1199px) {
+    .placeholder_img {
+        width: 100%;
+    }
+}
+
+
+
+@media(max-width:991px) {
+    .placeholder_img {
+        width: 100%;
+    }
+
+    .news-card h5 {
+        font-size: 21px;
+        line-height: 30px;
+    }
+
+    .blog .card-title {
+        font-size: 21px;
+        line-height: 30px;
+    }
+
+    .main_blog_title {
+        margin-top: 0px !important;
+        margin-bottom: 35px !important;
+    }
+
+    .contact_head br {
+        display: none;
+    }
+
+    .blog {
+        padding-bottom: 50px;
+    }
+
+    .pagination {
+        padding-top: 10px;
+    }
+}
+
+@media (max-width:767px) {
+    .news-card {
+        padding: 20px 0px;
+    }
+
+    .blog_new_part {
+        padding: 0px 0px 25px;
+        margin-bottom: 0px !important;
+    }
+
+    .main_blog_title {
+        margin: 0px auto 20px !important;
+    }
+
+    .pagination {
+        padding-top: 0px;
+    }
+
+    .blog {
+        padding-bottom: 50px;
+    }
 }
