--- a/src/Pages/Our_staff/our_staff.css
+++ b/src/Pages/Our_staff/our_staff.css
@@ -49,12 +49,15 @@
 }
 
 .guest-review-container .quote-mark {
-    font-size: 89px;
     color: white;
     position: absolute;
     bottom: -18px;
-    top: -78px;
+    top: -18px;
     right: 20px;
+}
+
+.guest-review-container .quote-mark img {
+    height: 30px;
 }
 
 .guest-review-container .quote-text {
@@ -80,6 +83,7 @@
     /* Aspect ratio 4:3 */
     background-color: #d3d3d3;
 }
+
 .our_staff .team-card {
     padding: 20px;
     overflow: hidden;
@@ -88,7 +92,7 @@
 
 
 .our_staff .card-title {
-    font-size:24px;
+    font-size: 24px;
     font-family: 'GFS Didot';
     line-height: 32px;
     padding-top: 0px;
@@ -101,4 +105,39 @@
     letter-spacing: 1px;
     font-family: 'Raleway';
     line-height: 26px;
+}
+
+.team-img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+@media(max-width:1199px) {
+    .name_author {
+        margin-left: 100px;
+    }
+}
+
+@media (max-width:991px) {
+    .our_staff .card-title {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+}
+
+@media (max-width:767px) {
+    .image-placeholder {
+        margin-top: 30px;
+
+    }
+
+    .name_author {
+        padding-top: 0px;  
+    }
+
+    .guest-review-container .quote-container {
+        margin-top: 40px;
+    }
 }
