--- a/src/components/BlogDetail/blogdetail.css
+++ b/src/components/BlogDetail/blogdetail.css
@@ -27,6 +27,7 @@
     line-height: 26px;
     letter-spacing: 2px;
 }
+
 .post_date {
     font-family: 'Raleway';
     font-size: 18px;
@@ -34,6 +35,7 @@
     letter-spacing: 2px;
     color: #1B1C21;
 }
+
 .blog-title {
     font-family: 'GFS Didot';
     font-size: 32px;
@@ -62,6 +64,8 @@
     line-height: 26px;
     font-weight: bold;
     color: #1B1C21;
+    display: flex;
+    flex-wrap: wrap;
     letter-spacing: 1px;
 }
 
@@ -98,4 +102,91 @@
 .blog_form .styled-hr {
     width: 230px;
     padding-bottom: 40px;
+}
+
+@media (max-width:1024px) {
+    .blog_post_gry_sec {
+        padding-left: 0px !important;
+    }
+
+    .bottom_Sec img {
+        width: 385px;
+        height: 300px;
+    }
+}
+
+@media (max-width:991px) {
+    .blog_post_sec .blog_post_gry_sec {
+        padding-left: 0px !important;
+    }
+
+    .blog_post_sec {
+        padding-bottom: 20px;
+    }
+
+    .blog-title {
+        font-size: 26px;
+        line-height: 36px;
+        margin-bottom: 12px;
+    }
+
+    .blog_content {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .blog_post_sec .blog_post_gry_sec img {
+        width: 100%;
+        height: 480px;
+    }
+
+    .bottom_Sec img {
+        width: 100%;
+        height: 300px;
+    }
+}
+
+@media (max-width:767px) {
+    .post-meta {
+        display: block !important;
+    }
+
+    .share_social img {
+        width: 12px;
+    }
+
+    .share_social img:nth-child(3) {
+        width: 14px;
+    }
+
+    .share_social img:nth-child(4) {
+        width: 14px;
+    }
+
+    .share_social img:nth-child(5) {
+        width: 14px;
+    }
+
+    .share_social {
+        margin-top: 10px;
+    }
+
+    .blog_news_section {
+        padding: 60px 0px;
+    }
+
+    .blog_post_sec .blog_post_gry_sec img {
+        width: 100%;
+        padding-left: 10px !important;
+        height: 480px;
+    }
+
+    .blog_detail_head br {
+        display: none;
+    }
+
+    .bottom_Sec img {
+        width: 100%;
+        height: 300px;
+    }
 }
