--- a/src/Pages/Facilities/facilities.css
+++ b/src/Pages/Facilities/facilities.css
@@ -34,9 +34,22 @@
     width: 32% !important;
 }
 
+.beach_bg:hover,
+.kids_bg:hover,
+.laundry_bg:hover,
+.internet_bg:hover {
+    background-size: 110%;
+    background-position: center;
+}
+
 .beach_bg {
     background-image: url('../../assets/image/beach_bg.jpg');
     background-size: cover;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .kids_bg {
@@ -44,20 +57,29 @@
     background-size: cover;
     position: relative;
     z-index: 1;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .laundry_bg {
     background-image: url('../../assets/image/laundry_ser.jpg');
     background-size: cover;
-    position: relative;
     z-index: 1;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .internet_bg {
     background-image: url('../../assets/image/internet.jpg');
     background-size: cover;
     position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
     z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .kids_bg::before,
