--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -537,16 +537,27 @@ body {
 .Amenities_box .Amenities_box_data {
 
     padding: 100px 50px;
-
     background-repeat: no-repeat;
     text-align: center;
 }
+
 
 .pool_bg {
     position: relative;
     background-image: url('../../assets/image/pool_bg.jpg');
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
+}
+
+.pool_bg:hover,
+.res_bg:hover,
+.gym_bg:hover,
+.spa_bg:hover {
+    background-size: 110%;
+    background-position: center;
 }
 
 /* Overlay for background opacity */
@@ -563,6 +574,7 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     /* Adjust the last value (0.5) for opacity level */
     z-index: -1;
+
 }
 
 /* Ensure content stays above the overlay */
@@ -581,22 +593,33 @@ body {
     background-image: url('../../assets/image/restaurant_bg.jpg');
     background-size: cover;
     position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
     z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .gym_bg {
     background-image: url('../../assets/image/gym_bg.jpg');
     background-size: cover;
     position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
     z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
 
 .spa_bg {
     background-image: url('../../assets/image/spa_bg.jpg');
     background-size: cover;
     position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
     z-index: 1;
+    transition: background-size 0.6s ease-in-out, background-position 0.6s ease-in-out;
 }
+
+
 
 .Amenities_box_data .Amenities_icon {
     height: 40px;
@@ -1200,6 +1223,7 @@ h3,
     right: 50px;
     font-family: serif;
 }
+
 .testimonial-text .quote-mark img {
     height: 30px;
 }
