--- a/src/Pages/contact/contact.css
+++ b/src/Pages/contact/contact.css
@@ -14,6 +14,10 @@
     color: rgba(255, 255, 255, 0.8);
 }
 
+.breadcrumb a {
+    color: rgba(255, 255, 255, 0.8) !important;
+}
+
 .contact_pine .section-title {
     font-family: 'Inter';
     color: #fff;
@@ -105,11 +109,14 @@
     margin-top: 32px;
     /* Button matches the design */
     border-color: #8a7b6d;
+    transition: all 0.3s ease-in-out;
 }
 
-.form-container .btn-primary:hover {
+.form-container .submit_btn:hover {
     background-color: #7b6c60;
     border-color: #7b6c60;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
 }
 
 .contact-info {
@@ -244,6 +251,7 @@
     .contact-info .row {
         gap: 15px;
     }
+
     .contact-info .border-end {
         border-right: none !important;
     }
